fix: folder open时的overflow

--- a/src/components/fileTree/folder/index.less
+++ b/src/components/fileTree/folder/index.less
@@ -6,5 +6,6 @@
 
   &__sub--open {
     height: 100%;
+    overflow: visible;
   }
 }
